--- a/5/2025_05_29_space/css/space.css
+++ b/5/2025_05_29_space/css/space.css
@@ -57,7 +57,6 @@ h1 > a > img {
   line-height: 100px;
   font-size: 20px;
   text-transform: uppercase;
-  position: relative;
 }
 
 #gnb > ul > li:hover > a {
@@ -130,6 +129,7 @@ main {
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
+  position: relative;
 }
 
 .text_sec {
@@ -153,8 +153,7 @@ main {
 
 .text_sec span {
   color: black;
-  text-shadow: -0.5px -0.5px 0 #fff, 0.5px -0.5px 0 #fff, -0.5px 0.5px 0 #fff,
-    0.5px -1.5px 0 #fff;
+  text-shadow: -0.5px -0.5px 0 #fff, 0.5px -0.5px 0 #fff, -0.5px 0.5px 0 #fff, 0.5px -1.5px 0 #fff;
   font-size: 100px;
   line-height: 1.2;
   margin-bottom: 40px;
@@ -174,11 +173,16 @@ main {
 
 .arrow {
   position: absolute;
-  transform: translate(920px, 950px);
+  transform: translate(920px, 800px);
   color: white;
+  transition: transform 0.3s ease;
 }
 #arrow {
   font-size: 4em;
+}
+
+.arrow:hover {
+  transform: translate(920px, 790px);
 }
 /* sec2 */
 .sec2 {
@@ -213,6 +217,24 @@ main {
   width: 50%;
   height: auto;
   overflow: hidden;
+}
+
+.heart {
+  position: absolute;
+  left: 0;
+  top: 150%;
+  font-size: 3rem;
+  animation: heart 5s linear 1s 1;
+}
+
+@keyframes heart {
+  0% {
+    transform: translateX(0) rotate(0deg);
+  }
+
+  100% {
+    transform: translateX(100vw) rotate(360deg);
+  }
 }
 
 /* sec3 */
@@ -261,4 +283,329 @@ main {
   margin-bottom: 20px;
   border-bottom: 1px solid #4f4f4f;
   padding: 30px;
+}
+
+#module_hover {
+  transition: transform 0.3s ease;
+}
+
+#module_hover:hover {
+  transform: translateY(-10px);
+  color: rgba(61, 244, 85, 1);
+}
+/* sec4 */
+.sec4 {
+  background-color: rgba(61, 244, 85, 0.9);
+  height: auto;
+}
+
+.con_box {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+/* left_con */
+.left_con {
+  width: 50%;
+  height: 1800px;
+  z-index: 999;
+  color: #fff;
+}
+
+.text_box {
+  height: 1800px;
+}
+.text_box h3 {
+  font-size: 16px;
+  line-height: 44px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  top: 100px;
+  position: sticky;
+}
+.text_box h2 {
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  top: 100px;
+  position: sticky;
+}
+
+.text_box a {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  padding: 8px 16px;
+  border: 1px solid #fff;
+  transition: 0.5s;
+  font-weight: 500;
+  top: 100px;
+  position: sticky;
+}
+
+.text_box:hover a {
+  color: black;
+  border: 1px solid black;
+}
+
+.text_box:hover #spin {
+  animation: spin 0.8s linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(360deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+/* right_con */
+.right_con {
+  width: 50%;
+  height: 100%;
+}
+
+.rightcon_box {
+  padding: 100px 0px;
+  border-bottom: 1px solid #fff;
+}
+.right_con h4 {
+  width: 16px;
+  line-height: 44px;
+  font-weight: 600;
+  display: block;
+}
+.right_con h3 {
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.rightcon_txt p {
+  font-size: 24px;
+  font-weight: 200;
+  line-height: 1.6;
+}
+.rightcon_img {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  transition: all 1s ease;
+}
+.rightcon_img img {
+  width: 300px;
+  height: 300px;
+}
+.rightcon_box {
+  display: flex;
+  transition: transform 0.8s ease;
+}
+
+.rightcon_box:hover {
+  transform: translateX(-100px);
+  color: rgba(49, 107, 255, 1);
+}
+
+.rightcon_box:hover .rightcon_img {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(-300px);
+}
+/* after, before */
+.right_con::after {
+  content: "circle";
+  display: block;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  right: 100px;
+  height: 300px;
+  background-color: #fff;
+  opacity: 0.4;
+  z-index: 5;
+  font-size: 0;
+  border-radius: 100%;
+  top: 448%;
+}
+
+.sec4::before {
+  content: "circle";
+  display: block;
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  right: 100px;
+  height: 600px;
+  background-color: rgba(49, 107, 255, 1);
+  z-index: 0;
+  font-size: 0;
+  border-radius: 100%;
+  top: 296%;
+  left: -7%;
+}
+
+/* sec5 */
+.sec5 {
+  background-color: black;
+  position: relative;
+}
+.sec5 h2 {
+  left: 41%;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  position: absolute;
+  top: 80px;
+  color: #fff;
+}
+.card_wrap {
+  width: 1600px;
+  padding: 200px 0;
+  margin: 0 auto;
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  position: relative;
+}
+
+.card_wrap_text > a:hover #spin {
+  animation: spin 0.8s linear;
+}
+
+.card {
+  width: calc(25%-20px);
+  height: fit-content;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
+  overflow: hidden;
+  border: 1px solid #fff;
+  gap: 30px;
+  border-radius: 20px;
+  padding: 20px;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.card:hover {
+  animation: width1 1s linear;
+}
+
+.card:hover a {
+  border: 1px solid rgba(61, 244, 85, 1);
+  color: rgba(61, 244, 85, 1);
+}
+
+@keyframes width1 {
+  0% {
+    width: calc(26%);
+  }
+
+  25% {
+    width: calc(27%);
+  }
+
+  50% {
+    width: calc(28%);
+  }
+
+  75% {
+    width: calc(29%);
+  }
+
+  100% {
+    width: calc(30%);
+  }
+}
+
+.card_wrap_text h3 {
+  font-size: 24px;
+  margin-bottom: 10xp;
+  color: #fff;
+}
+
+.card_wrap_text p {
+  font-size: 16px;
+  height: 120px;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.card_wrap_text a {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  padding: 8px 16px;
+  border: 1px solid #fff;
+}
+
+.rolling {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  font-size: 100px;
+  font-weight: 800;
+  opacity: 0.8;
+  position: absolute;
+  top: 50%;
+  transform: rotate(10deg);
+}
+
+.rolling_text {
+  color: rgba(49, 107, 255, 1);
+  display: flex;
+  gap: 30px;
+  position: absolute;
+  animation: rolling 1s linear infinite reverse;
+}
+
+@keyframes rolling {
+  0% {
+    transform: translateX(30vw);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+#blank {
+  color: black;
+  text-shadow: -0.5px -0.5px 0 rgba(49, 107, 255, 1), 0.5px -0.5px 0 rgba(49, 107, 255, 1),
+    -0.5px 0.5px 0 rgba(49, 107, 255, 1), 0.5px -1.5px 0 rgba(49, 107, 255, 1);
+}
+/* footer */
+footer {
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  text-align: center;
+  line-height: 92px;
+}
+
+.footer_icon {
+  display: flex;
+  gap: 20px;
+}
+
+.footer_icon > a > i {
+  color: #3f3d56;
+}
+
+.footer_icon > a > i:hover {
+  color: rgba(61, 244, 85, 1);
 }
