--- a/5/2025_05_29_space/css/space.css
+++ b/5/2025_05_29_space/css/space.css
@@ -86,9 +86,21 @@ h1 > a > img {
   display: none;
 }
 #icons {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
   font-size: 2em;
+  transition: all 1s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.icons > div > a:hover #icons {
+  color: black;
+  background-color: rgba(61, 244, 85, 0.9);
+  border-radius: 100%;
+}
 .icons {
   width: fit-content;
   height: 40px;
@@ -328,7 +340,7 @@ main {
   line-height: 60px;
   font-weight: 400;
   margin-bottom: 20px;
-  top: 100px;
+  top: 40px;
   position: sticky;
 }
 
@@ -340,7 +352,7 @@ main {
   border: 1px solid #fff;
   transition: 0.5s;
   font-weight: 500;
-  top: 100px;
+  top: 200px;
   position: sticky;
 }
 
